--- a/src/assets/scss/App.module.scss
+++ b/src/assets/scss/App.module.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
+@import './variables';
 
 * {
   font-family: 'Poppins', sans-serif;
@@ -7,6 +8,20 @@
 }
 
 body {
-  background-color: #202020;
+  background-color: $darkgrey;
   color: #eee;
+  max-width: 100vw;
+  overflow: hidden;
 }
+
+main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  & > div {
+    width: 80vw;
+  }
+}
+
+
