done homepage in basic way and subpages transitions

--- a/src/assets/scss/App.module.scss
+++ b/src/assets/scss/App.module.scss
@@ -18,9 +18,13 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
+  height: 80vh;
+  position: relative;
 
   & > div {
     width: 80vw;
+    position: absolute
   }
 }
 
