--- a/src/assets/scss/Header.module.scss
+++ b/src/assets/scss/Header.module.scss
@@ -16,8 +16,12 @@
   }
 
   .logo {
-    font-size: 2rem;
-    font-weight: 800;
+    width: 3rem;
+    height: 3rem;
+
+    svg {
+      fill: $white;
+    }
   }
 
   nav {
