--- a/src/assets/scss/AboutPage.module.scss
+++ b/src/assets/scss/AboutPage.module.scss
@@ -3,35 +3,65 @@
 .wrapper {
   flex-direction: column;
   align-items: center;
+  justify-content: start;
+  gap: 4rem;
   height: 55vh;
+
+  h1 {
+    margin: 2rem 0 0 0;
+  }
 
   .content {
     display: flex;
+    align-items: center;
     max-width: 60%;
 
-    .photo {
-      width: 8rem;
-      border-radius: 50%;
-      height: 8rem;
-      object-fit: cover;
-      object-position: 0 20%;
-    }
+    .left {
+      width: 40%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      gap: 1rem;
 
-    .socials {
-      img {
-        fill: $green;
+      .photo {
+        width: 8rem;
+        border-radius: 50%;
+        height: 8rem;
+        object-fit: cover;
+        object-position: 0 20%;
+      }
+
+      & > p {
+        font-size: 1.2rem;
+      }
+
+      .socials {
+        display: flex;
+        justify-content: center;
+        gap: 2.5rem;
+
+        svg {
+          fill: $white;
+          width: 2rem;
+          transition: all 300ms ease-out;
+
+          &:hover {
+            fill: $green;
+          }
+        }
       }
     }
-  }
 
-  .text {
-    display: flex;
-    flex-direction: column;
-    gap: 0.5rem;
+    .right {
+      display: flex;
+      flex-direction: column;
+      gap: 0.5rem;
+      width: 60%;
 
-    p {
-      font-size: .9rem;
-
+      p {
+        font-size: 0.9rem;
+      }
     }
   }
 }
