--- a/src/assets/scss/ContactPage.module.scss
+++ b/src/assets/scss/ContactPage.module.scss
@@ -27,12 +27,14 @@
       border: none;
       border-radius: .3rem;
       padding: .1rem .3rem;
-      background-color: $green;
+      background-color: $orange;
       width: 100%;
+      transition: all 300ms ease-in-out;
 
       &::placeholder {
         color: $black;
         font-size: .9rem;
+        transition: color 300ms ease-in-out;
       }
     }
 
@@ -41,7 +43,7 @@
       height: 2rem;
       background-color: transparent;
       border: none;
-      color: $white;
+      color: $darkgrey;
       font-size: 1rem;
       transition: all 0.3s ease-out;
       position: relative;
@@ -56,16 +58,46 @@
         transform: translateX(-50%);
         height: 2px;
         width: 100%;
-        background-color: $white;
+        background-color: $darkgrey;
         transition: all 0.3s ease-out;
       }
 
       &:hover,
       &:active {
-        color: $green;
+        color: $orange;
 
         &::before {
-          background-color: $green;
+          background-color: $orange;
+        }
+      }
+    }
+  }
+}
+
+.dark {
+  .container {
+    input, textarea {
+      background-color: $purple;
+      color: $white;
+
+      &::placeholder {
+        color: $white;
+      }
+    }
+
+    button {
+      color: $blue-gray;
+
+      &::before {
+        background-color: $blue-gray;
+      }
+
+      &:hover,
+      &:active {
+        color: $purple;
+
+        &::before {
+          background-color: $purple;
         }
       }
     }
