--- a/src/assets/scss/Header.module.scss
+++ b/src/assets/scss/Header.module.scss
@@ -20,7 +20,8 @@
     height: 3rem;
 
     svg {
-      fill: $white;
+      fill: $darkgrey;
+      transition: all 0.3s ease-out;
     }
   }
 
@@ -39,7 +40,7 @@
 
       li {
         a {
-          color: $white;
+          color: $darkgrey;
           transition: all 0.3s ease-out;
           position: relative;
 
@@ -52,14 +53,14 @@
             transform: translateX(-50%);
             height: 2px;
             width: 0;
-            background-color: $green;
+            background-color: $orange;
             transition: all 0.3s ease-out;
           }
 
           &:hover,
           &:active,
           &.active {
-            color: $green;
+            color: $orange;
 
             &::before {
               width: 100%;
@@ -69,20 +70,28 @@
       }
     }
   }
+}
 
-  .socials {
-    display: flex;
-    gap: 1rem;
-    align-items: center;
+.dark {
+  .logo svg {
+    fill: $blue-gray;
+  }
 
-    a {
-      svg {
-        width: 1.5rem;
-        fill: $white;
-        transition: all 300ms ease-out;
+  nav {
+    ul {
+      li {
+        a {
+          color: $blue-gray;
 
-        &:hover {
-          fill: $green;
+          &::before {
+            background-color: $purple;
+          }
+
+          &:hover,
+          &:active,
+          &.active {
+            color: $purple;
+          }
         }
       }
     }
