--- a/src/assets/scss/PageWrapper.module.scss
+++ b/src/assets/scss/PageWrapper.module.scss
@@ -1,8 +1,19 @@
 @import './variables';
 
 .wrapper {
-  border-radius: .8rem;
-  background-color: $darkgrey;
-  filter: drop-shadow(0 .2rem 1rem $black);
+  border-radius: 0.8rem;
   display: flex;
+  transition: all 300ms ease-in-out;
+}
+
+.light {
+  background-color: $blue-gray;
+  color: $darkgrey;
+  filter: drop-shadow(0 0.2rem 0.7rem rgba($darkgrey-light, 0.2));
+}
+
+.dark {
+  background-color: $darkgrey;
+  filter: drop-shadow(0 0.2rem 1rem $black);
+  color: $blue-gray;
 }
