--- a/src/assets/scss/PortfolioPage.module.scss
+++ b/src/assets/scss/PortfolioPage.module.scss
@@ -16,16 +16,31 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      background-color: $green;
+      background-color: $orange;
       border-radius: 1rem;
       width: 18rem;
       height: 25rem;
       filter: drop-shadow(0 0 1rem rgba($black, 0.5));
+      transition: all 300ms ease-in-out;
 
       p {
-        color: $black;
+        transition: all 300ms ease-in-out;
+        color: $darkgrey;
         font-size: 2rem;
         font-weight: bold;
+      }
+    }
+  }
+}
+
+.dark {
+  .container {
+    .page {
+      background-color: $purple;
+      filter: drop-shadow(0 0 1rem rgba($black, 0.5));
+
+      p {
+        color: $blue-gray;
       }
     }
   }
