--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -1,5 +1,8 @@
-$black: #000;
-$darkgrey: #202020;
+$black:           #000;
+$darkgrey:        #202020;
 $darkgrey-light:  #303030;
-$white:  #fff;
-$green: #00C853;
+$blue-gray:       #ECEFF1;
+$white:           #fff;
+$green:           #00C853;
+$orange:          #FF8F00;
+$purple:          #AA00FF;
