--- a/src/assets/scss/_global.scss
+++ b/src/assets/scss/_global.scss
@@ -1,5 +1,26 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bungee+Inline&family=Bungee+Outline&family=Bungee+Shade&family=Nabla&family=Saira+Stencil+One&family=Train+One&family=Zen+Tokyo+Zoo&display=swap');
 @import './variables';
+
+// .lol {
+//   font-family: 'Bungee Inline', cursive;
+
+//   font-family: 'Bungee Outline', cursive;
+
+//   font-family: 'Bungee Shade', cursive;
+
+//   font-family: 'Nabla', cursive;
+
+//   font-family: 'Saira Stencil One', cursive;
+
+//   font-family: 'Train One', cursive;
+
+//   font-family: 'Zen Tokyo Zoo', cursive;
+// }
+
+@mixin SairaFont {
+  font-family: 'Saira Stencil One', cursive;
+}
 
 * {
   font-family: 'Poppins', sans-serif;
