--- a/src/assets/scss/ContactPage.module.scss
+++ b/src/assets/scss/ContactPage.module.scss
@@ -3,8 +3,10 @@
 .wrapper {
   flex-direction: column;
   align-items: center;
+  justify-content: start;
   padding: 2rem;
-  gap: 2rem;
+  gap: 6rem;
+  height: 65vh;
 
   .container {
     display: flex;
