--- a/src/assets/scss/Header.module.scss
+++ b/src/assets/scss/Header.module.scss
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Saira+Stencil+One&display=swap');
+
+// @import './global';
 @import './variables';
 
 .header {
@@ -16,13 +19,18 @@
   }
 
   .logo {
-    width: 3rem;
-    height: 3rem;
-
-    svg {
-      fill: $darkgrey;
-      transition: all 0.3s ease-out;
+    // width: 3rem;
+    // height: 3rem;
+    p {
+      font-family: 'Saira Stencil One', cursive;
+      font-size: 2rem;
+      width: 100px;
     }
+
+    // svg {
+    //   fill: $darkgrey;
+    //   transition: all 0.3s ease-out;
+    // }
   }
 
   nav {
