--- a/src/assets/scss/ThemeButton.module.scss
+++ b/src/assets/scss/ThemeButton.module.scss
@@ -1,6 +1,6 @@
 .container {
   height: 40px;
-  width: 100px !important;
+  width: 100px;
   background-image: radial-gradient(
     circle farthest-corner at 10% 20%,
     rgba(253, 203, 50, 1) 0%,
@@ -10,11 +10,11 @@
   display: flex;
   align-items: center;
   box-sizing: border-box;
-  padding: 0 5px !important;
+  padding: 0 5px ;
   cursor: pointer;
-  position: absolute;
-  right: 50px;
-  top: 20px;
+  position: relative;
+  // right: 50px;
+  // top: 20px;
   transition: all 0.2s ease-out;
 
   .icon {
@@ -35,11 +35,11 @@
     top: 0;
     border-radius: 25px;
     height: 40px;
-    width: 100px !important;
+    width: 100px ;
     display: flex;
     align-items: center;
     box-sizing: border-box;
-    padding: 0 5px !important;
+    padding: 0 5px;
     z-index: 0;
   }
 }
