--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -1,8 +1,10 @@
-$black:           #000;
-$darkgrey:        #202020;
-$darkgrey-light:  #303030;
-$blue-gray:       #ECEFF1;
-$white:           #fff;
-$green:           #00C853;
-$orange:          #FF8F00;
-$purple:          #AA00FF;
+$black          : #000;
+$darkgrey       : #202020;
+$darkgrey-light : #303030;
+$blue-gray      : #ECEFF1;
+$white          : #fff;
+$green          : #00C853;
+$orange         : #FF8F00;
+$purple         : #AA00FF;
+$dark-shadow    : rgba($black, 0.5);
+$light-shadow   : rgba($darkgrey-light, 0.5);
