--- a/src/assets/scss/PageWrapper.module.scss
+++ b/src/assets/scss/PageWrapper.module.scss
@@ -5,7 +5,7 @@
   display: flex;
   transition: all 300ms ease-in-out;
   box-sizing: border-box;
-  max-height: 65vh;
+  height: 65vh;
 }
 
 .light {
