remove unnecesary code

--- a/src/assets/scss/404.module.scss
+++ b/src/assets/scss/404.module.scss
@@ -48,16 +48,16 @@
   }
 }
 
-.dark {
-  a {
-    color: $blue-gray;
+// .dark {
+//   a {
+//     color: $blue-gray;
 
-    &::before {
-      background-color: $purple;
-    }
+//     &::before {
+//       background-color: $purple;
+//     }
 
-    &:hover{
-      color: $purple;
-    }
-  }
-}
+//     &:hover{
+//       color: $purple;
+//     }
+//   }
+// }
