--- a/src/assets/scss/PageDetails.module.scss
+++ b/src/assets/scss/PageDetails.module.scss
@@ -11,7 +11,6 @@
     width: 35%;
     height: 100%;
     border-radius: 1rem;
-    // overflow-y: scroll;
     filter: drop-shadow(0 0 0.5rem $light-shadow);
 
     .photo {
@@ -20,6 +19,9 @@
       object-fit: cover;
       object-position: top;
       border-radius: 1rem;
+      display: flex;
+      align-items: center;
+      justify-content: center;
     }
   }
 
