--- a/src/assets/scss/PageDetails.module.scss
+++ b/src/assets/scss/PageDetails.module.scss
@@ -22,6 +22,8 @@
       display: flex;
       align-items: center;
       justify-content: center;
+      background-color: $orange;
+      transition: all 300ms ease-in-out;
     }
   }
 
@@ -46,4 +48,8 @@
       text-align: center;
     }
   }
+}
+
+.dark {
+  background-color: $purple !important;
 }
