--- a/src/assets/scss/Header.module.scss
+++ b/src/assets/scss/Header.module.scss
@@ -49,12 +49,16 @@
       li {
         a {
           color: $darkgrey;
-          transition: all 0.3s ease-out;
+          transition: all 0.2s ease-out;
           position: relative;
+          border-radius: 1.5rem;
+          padding: 0.8rem 1.2rem;
+          box-shadow: 0.2rem 0.2rem 0.5rem $light-shadow-2,
+            -0.2rem -0.2rem 0.5rem rgba($white, 0.7);
 
           &::before {
             content: '';
-            display: block;
+            display: none;
             position: absolute;
             bottom: 0;
             left: 50%;
@@ -74,6 +78,14 @@
               width: 100%;
             }
           }
+
+          &:active,
+          &.active {
+            box-shadow: 0.2rem 0.2rem 0.5rem $light-shadow-2,
+              -0.2rem -0.2rem 0.5rem rgba($white, 0.7),
+              inset 0.2rem 0.2rem 0.2rem rgba($darkgrey-light, 0.1),
+              inset -0.2rem -0.2rem 0.5rem $white;
+          }
         }
       }
     }
@@ -90,6 +102,8 @@
       li {
         a {
           color: $blue-gray;
+          box-shadow: 0.2rem 0.2rem 0.5rem rgba($black, 0.7),
+            -0.2rem -0.2rem 0.5rem $light-shadow;
 
           &::before {
             background-color: $purple;
@@ -99,6 +113,14 @@
           &:active,
           &.active {
             color: $purple;
+          }
+
+          &:active,
+          &.active {
+            box-shadow: 0.2rem 0.2rem 0.5rem rgba($black, 0.7),
+              -0.2rem -0.2rem 0.5rem $light-shadow,
+              inset 0.2rem 0.2rem 0.2rem rgba($black, 0.5),
+              inset -0.2rem -0.2rem 0.5rem $light-shadow;
           }
         }
       }
