--- a/src/assets/scss/PageDetails.module.scss
+++ b/src/assets/scss/PageDetails.module.scss
@@ -6,6 +6,7 @@
   padding: 3rem;
   flex-direction: row;
   gap: 3rem;
+  position: relative;
 
   &-photo {
     width: 35%;
@@ -48,8 +49,44 @@
       text-align: center;
     }
   }
+
+  .back-btn {
+    position: absolute;
+    background-color: transparent;
+    border-radius: 1.5rem;
+    bottom: 2rem;
+    right: 2rem;
+    color: $darkgrey;
+    padding: 0.8rem 1.2rem;
+    text-decoration: none;
+    transition: all 0.2s ease-out;
+    box-shadow: 0.2rem 0.2rem 0.5rem $light-shadow-2,
+      -0.2rem -0.2rem 0.5rem rgba($white, 0.7);
+
+    &:active {
+      box-shadow: 0.2rem 0.2rem 0.5rem $light-shadow-2,
+        -0.2rem -0.2rem 0.5rem rgba($white, 0.7),
+        inset 0.2rem 0.2rem 0.2rem rgba($darkgrey-light, 0.1),
+        inset -0.2rem -0.2rem 0.5rem $white;
+    }
+  }
 }
 
 .dark {
-  background-color: $purple !important;
+  .photo {
+    background-color: $purple !important;
+  }
+
+  .back-btn {
+    color: $white;
+    box-shadow: 0.2rem 0.2rem 0.5rem rgba($black, 0.7),
+      -0.2rem -0.2rem 0.5rem $light-shadow;
+
+    &:active {
+      box-shadow: 0.2rem 0.2rem 0.5rem rgba($black, 0.7),
+        -0.2rem -0.2rem 0.5rem $light-shadow,
+        inset 0.2rem 0.2rem 0.2rem rgba($black, 0.5),
+        inset -0.2rem -0.2rem 0.5rem $light-shadow;
+    }
+  }
 }
