--- a/src/assets/scss/404.module.scss
+++ b/src/assets/scss/404.module.scss
@@ -5,7 +5,6 @@
   align-items: center;
   justify-content: center;
   gap: 2rem;
-  height: 65vh;
 
   div {
     display: flex;
@@ -22,27 +21,62 @@
   a {
     text-decoration: none;
     color: $darkgrey;
-    transition: all 0.3s ease-out;
+    transition: all 0.2s ease-out;
     position: relative;
+    border-radius: 1.5rem;
+    padding: 0.8rem 1.2rem;
+    box-shadow: 0.2rem 0.2rem 0.5rem $light-shadow-2,
+    -0.2rem -0.2rem 0.5rem rgba($white, 0.7);
 
-    &::before {
-      content: '';
-      display: block;
-      position: absolute;
-      bottom: 0;
-      left: 50%;
-      transform: translateX(-50%);
-      height: 2px;
-      width: 0;
-      background-color: $orange;
-      transition: all 0.25s ease-out;
+    // &::before {
+    //   content: '';
+    //   display: none;
+    //   position: absolute;
+    //   bottom: 0;
+    //   left: 50%;
+    //   transform: translateX(-50%);
+    //   height: 2px;
+    //   width: 0;
+    //   background-color: $orange;
+    //   transition: all 0.25s ease-out;
+    // }
+
+    &:active {
+      box-shadow: 0.2rem 0.2rem 0.5rem $light-shadow-2,
+        -0.2rem -0.2rem 0.5rem rgba($white, 0.7),
+        inset 0.2rem 0.2rem 0.2rem rgba($darkgrey-light, 0.1),
+        inset -0.2rem -0.2rem 0.5rem $white;
     }
 
     &:hover{
       color: $orange;
 
-      &::before {
-        width: 100%;
+      // &::before {
+      //   width: 100%;
+      // }
+    }
+  }
+}
+
+@media screen and (max-width: 576px) {
+  .wrapper {
+    gap: 2rem;
+
+    div {
+      p {
+        text-align: center;
+      }
+    }
+
+    a {
+      -webkit-tap-highlight-color: transparent;
+
+      &:hover{
+        color: $darkgrey;
+      }
+
+      &:active{
+        color: $orange;
       }
     }
   }
@@ -51,13 +85,25 @@
 .dark {
   a {
     color: $blue-gray;
+    box-shadow: 0.2rem 0.2rem 0.5rem rgba($black, 0.7),
+      -0.2rem -0.2rem 0.5rem $light-shadow;
 
-    &::before {
-      background-color: $purple;
-    }
+      &:active {
+        box-shadow: 0.2rem 0.2rem 0.5rem rgba($black, 0.7),
+          -0.2rem -0.2rem 0.5rem $light-shadow,
+          inset 0.2rem 0.2rem 0.2rem rgba($black, 0.5),
+          inset -0.2rem -0.2rem 0.5rem $light-shadow;
+      }
 
     &:hover{
+      color: $blue-gray;
+    }
+
+    &:active{
       color: $purple;
     }
   }
 }
+
+
+
