--- a/src/assets/scss/AboutPage.module.scss
+++ b/src/assets/scss/AboutPage.module.scss
@@ -5,7 +5,6 @@
   align-items: center;
   justify-content: start;
   gap: 6rem;
-  height: 65vh;
 
   h1 {
     margin: 2rem 0 0 0;
@@ -54,6 +53,47 @@
 
       p {
         font-size: 0.9rem;
+      }
+    }
+  }
+}
+
+
+@media screen and (max-width: 576px) {
+  .wrapper {
+    gap: 1rem;
+
+    h1 {
+      margin: 1rem 0 0 0;
+    }
+
+    .content {
+      max-width: 90%;
+      flex-direction: column;
+
+      .left {
+        width: 100%;
+        flex-direction: column;
+        gap: .8rem;
+        margin: 0 0 .2rem;
+
+        .photo {
+          width: 8rem;
+          border-radius: 50%;
+          height: 8rem;
+        }
+
+        & > p {
+          font-size: 1.1rem;
+        }
+
+        .socials {
+          gap: 2rem;
+        }
+      }
+
+      .right {
+        width: 100%;
       }
     }
   }
