--- a/src/assets/scss/Header.module.scss
+++ b/src/assets/scss/Header.module.scss
@@ -7,6 +7,7 @@
   width: 100%;
   display: flex;
   justify-content: center;
+  height: 10vh;
 
   & > div {
     display: flex;
@@ -16,14 +17,17 @@
     box-sizing: border-box;
     max-width: 1440px;
     width: 100%;
+    align-items: center;
   }
 
   .logo {
-    // width: 3rem;
-    // height: 3rem;
+    display: flex;
+    align-items: center;
+
     p {
       font-family: 'Saira Stencil One', cursive;
       font-size: 2rem;
+      line-height: 100%;
       width: 100px;
     }
 
@@ -56,27 +60,27 @@
           box-shadow: 0.2rem 0.2rem 0.5rem $light-shadow-2,
             -0.2rem -0.2rem 0.5rem rgba($white, 0.7);
 
-          &::before {
-            content: '';
-            display: none;
-            position: absolute;
-            bottom: 0;
-            left: 50%;
-            transform: translateX(-50%);
-            height: 2px;
-            width: 0;
-            background-color: $orange;
-            transition: all 0.3s ease-out;
-          }
+          // &::before {
+          //   content: '';
+          //   display: none;
+          //   position: absolute;
+          //   bottom: 0;
+          //   left: 50%;
+          //   transform: translateX(-50%);
+          //   height: 2px;
+          //   width: 0;
+          //   background-color: $orange;
+          //   transition: all 0.3s ease-out;
+          // }
 
           &:hover,
           &:active,
           &.active {
             color: $orange;
 
-            &::before {
-              width: 100%;
-            }
+            // &::before {
+            //   width: 100%;
+            // }
           }
 
           &:active,
@@ -92,6 +96,94 @@
   }
 }
 
+@media screen and (min-width: 1921px) {
+  .header {
+    height: 12vh;
+
+    & > div {
+      padding: 2rem;
+      max-width: 1600px;
+    }
+
+    .logo {
+      p {
+        font-size: 3rem;
+      }
+    }
+
+    nav {
+      ul {
+        gap: 3rem;
+
+        li {
+          a {
+            border-radius: 2rem;
+            padding: 1rem 1.8rem;
+            font-size: 1.2rem;
+          }
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 576px) {
+  .header {
+    width: 100vw;
+    height: 80px;
+    position: relative;
+
+
+    & > div {
+      display: flex;
+      flex-direction: row;
+      padding: 0;
+      justify-content: center;
+      width: 100vw;
+      align-items: center;
+    }
+
+    .logo {
+      display: none;
+    }
+
+    nav {
+      width: 100%;
+      height: 100%;
+
+      ul {
+        width: 100%;
+        height: 100%;
+        gap: 0;
+        justify-content: space-around;
+
+        li {
+          aspect-ratio: 1.618;
+          display: flex;
+          align-items: center;
+          width: 21vw;
+
+          a {
+            border-radius: 1rem;
+            width: 100%;
+            padding: 30px 0;
+            text-align: center;
+            -webkit-tap-highlight-color: transparent;
+          }
+        }
+      }
+    }
+
+    .theme-button {
+      position: absolute;
+      left: 50%;
+      bottom: 0;
+      transform: translate(-50%);
+    }
+  }
+}
+
+
 .dark {
   .logo svg {
     fill: $blue-gray;
@@ -104,10 +196,6 @@
           color: $blue-gray;
           box-shadow: 0.2rem 0.2rem 0.5rem rgba($black, 0.7),
             -0.2rem -0.2rem 0.5rem $light-shadow;
-
-          &::before {
-            background-color: $purple;
-          }
 
           &:hover,
           &:active,
