--- a/src/assets/scss/PageDetails.module.scss
+++ b/src/assets/scss/PageDetails.module.scss
@@ -53,12 +53,12 @@
   .back-btn {
     position: absolute;
     background-color: transparent;
-    border-radius: 1.5rem;
     bottom: 2rem;
     right: 2rem;
     color: $darkgrey;
-    padding: 0.8rem 1.2rem;
     text-decoration: none;
+    border-radius: 1.5rem;
+    padding: 0.8rem 1.2rem;
     transition: all 0.2s ease-out;
     box-shadow: 0.2rem 0.2rem 0.5rem $light-shadow-2,
       -0.2rem -0.2rem 0.5rem rgba($white, 0.7);
@@ -71,6 +71,47 @@
     }
   }
 }
+
+@media screen and (max-width: 576px) {
+  .wrapper {
+    padding: .5rem;
+    flex-direction: column-reverse;
+    justify-content: flex-end;
+    gap: 2rem;
+
+    &-photo {
+      width: 100%;
+      height: 250px;
+    }
+
+    &-text {
+      width: 100%;
+      gap: 0.7rem;
+
+      .title {
+        font-size: 1.5rem;
+      }
+
+      .bold {
+        font-weight: 600;
+      }
+
+      .text {
+        max-width: unset;
+        width: 100%;
+        text-align: center;
+      }
+    }
+
+    .back-btn {
+      bottom: 1rem;
+      right: 50%;
+      transform: translate(50%);
+      -webkit-tap-highlight-color: transparent;
+    }
+  }
+
+  }
 
 .dark {
   .photo {
