--- a/src/assets/scss/PageWrapper.module.scss
+++ b/src/assets/scss/PageWrapper.module.scss
@@ -5,7 +5,8 @@
   display: flex;
   transition: all 300ms ease-in-out;
   box-sizing: border-box;
-  height: 65vh;
+  width: 80vw;
+  aspect-ratio: 21/9;
 }
 
 .light {
@@ -20,4 +21,20 @@
   color: $blue-gray;
   box-shadow: 0.5rem 0.5rem 1rem rgba($black, 0.7),
              -0.5rem -0.5rem 1rem $light-shadow;
+}
+
+@media screen and (min-width: 1920px) {
+  .wrapper {
+    border-radius: 1rem;
+    max-width: 1800px;
+  }
+}
+
+@media screen and (max-width: 576px) {
+  .wrapper {
+    border-radius: 0.8rem;
+    width: 90vw;
+    aspect-ratio: unset;
+    height: 90%;
+  }
 }
