--- a/src/assets/scss/PortfolioPage.module.scss
+++ b/src/assets/scss/PortfolioPage.module.scss
@@ -6,7 +6,6 @@
   padding: 2rem;
   box-sizing: border-box;
   gap: 3rem;
-  height: 65vh;
 
   .container {
     display: flex;
@@ -23,6 +22,31 @@
 
       h2 {
         color: $blue-gray;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 576px) {
+  .wrapper {
+    padding: 1.5rem;
+
+    .container {
+      flex-direction: column;
+      width: 100%;
+      gap: 1rem;
+    }
+  }
+
+  .dark {
+    .container {
+      & > a {
+        background-color: $purple;
+        filter: drop-shadow(0 0 1rem $dark-shadow);
+
+        h2 {
+          color: $blue-gray;
+        }
       }
     }
   }
