--- a/src/assets/scss/ThemeButton.module.scss
+++ b/src/assets/scss/ThemeButton.module.scss
@@ -20,6 +20,7 @@
   // right: 50px;
   // top: 20px;
   transition: all 0.2s ease-out;
+  -webkit-tap-highlight-color: transparent;
 
   .icon {
     color: #f88748;
@@ -72,4 +73,66 @@
   overflow: hidden;
   position: relative;
   z-index: 1;
+}
+
+
+@media screen and (max-width: 576px) {
+.container {
+  height: 50px;
+  width: 50px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  box-sizing: border-box;
+  padding: 0 5px;
+  cursor: pointer;
+  position: relative;
+  // right: 50px;
+  // top: 20px;
+  transition: all 0.2s ease-out;
+
+  .icon {
+    color: #f88748;
+  }
+
+  .dark {
+    transition: all 0.2s ease-out;
+    opacity: 0;
+    position: absolute;
+    right: 0;
+    top: 0;
+    border-radius: 25px;
+    height: 50px;
+    width: 50px;
+    display: flex;
+    align-items: center;
+    box-sizing: border-box;
+    padding: 0 5px;
+    z-index: 0;
+    transform: scale(1.01);
+  }
+}
+
+.on {
+  .dark {
+    opacity: 1;
+  }
+
+  .icon {
+    color: rgba(41, 14, 151, 1);
+  }
+}
+.handle {
+  height: 40px;
+  width: 40px;
+  border-radius: 50%;
+  display: grid;
+  align-items: center;
+  justify-items: center;
+  background-color: $white;
+  overflow: hidden;
+  position: relative;
+  z-index: 1;
+}
+
 }
