--- a/src/assets/scss/404.module.scss
+++ b/src/assets/scss/404.module.scss
@@ -1,4 +1,5 @@
 @import './variables';
+@import './global';
 
 .wrapper {
   flex-direction: column;
@@ -19,41 +20,20 @@
   }
 
   a {
+    @include lightShadow;
     text-decoration: none;
     color: $darkgrey;
     transition: all 0.2s ease-out;
     position: relative;
     border-radius: 1.5rem;
     padding: 0.8rem 1.2rem;
-    box-shadow: 0.2rem 0.2rem 0.5rem $light-shadow-2,
-    -0.2rem -0.2rem 0.5rem rgba($white, 0.7);
-
-    // &::before {
-    //   content: '';
-    //   display: none;
-    //   position: absolute;
-    //   bottom: 0;
-    //   left: 50%;
-    //   transform: translateX(-50%);
-    //   height: 2px;
-    //   width: 0;
-    //   background-color: $orange;
-    //   transition: all 0.25s ease-out;
-    // }
 
     &:active {
-      box-shadow: 0.2rem 0.2rem 0.5rem $light-shadow-2,
-        -0.2rem -0.2rem 0.5rem rgba($white, 0.7),
-        inset 0.2rem 0.2rem 0.2rem rgba($darkgrey-light, 0.1),
-        inset -0.2rem -0.2rem 0.5rem $white;
+      @include lightShadowActive;
     }
 
     &:hover{
       color: $orange;
-
-      // &::before {
-      //   width: 100%;
-      // }
     }
   }
 }
@@ -84,15 +64,11 @@
 
 .dark {
   a {
+    @include darkShadow;
     color: $blue-gray;
-    box-shadow: 0.2rem 0.2rem 0.5rem rgba($black, 0.7),
-      -0.2rem -0.2rem 0.5rem $light-shadow;
 
       &:active {
-        box-shadow: 0.2rem 0.2rem 0.5rem rgba($black, 0.7),
-          -0.2rem -0.2rem 0.5rem $light-shadow,
-          inset 0.2rem 0.2rem 0.2rem rgba($black, 0.5),
-          inset -0.2rem -0.2rem 0.5rem $light-shadow;
+        @include darkShadowActive;
       }
 
     &:hover{
