--- a/src/assets/scss/ContactPage.module.scss
+++ b/src/assets/scss/ContactPage.module.scss
@@ -1,4 +1,5 @@
 @import './variables';
+@import './global';
 
 .wrapper {
   flex-direction: column;
@@ -25,6 +26,7 @@
 
     input,
     textarea {
+      @include lightShadow;
       outline: none;
       border: none;
       border-radius: 1.3rem;
@@ -33,8 +35,6 @@
       background-color: transparent;
       width: 100%;
       transition: all 300ms ease-in-out;
-      box-shadow: 0.2rem 0.2rem 0.5rem $light-shadow-2,
-      -0.2rem -0.2rem 0.5rem rgba($white, 0.7);
 
       &::placeholder {
         color: $black;
@@ -44,14 +44,12 @@
 
       &:focus,
       &:active {
-        box-shadow: 0.2rem 0.2rem 0.5rem $light-shadow-2,
-        -0.2rem -0.2rem 0.5rem rgba($white, 0.7),
-        inset 0.2rem 0.2rem 0.2rem rgba($darkgrey-light, 0.1),
-        inset -0.2rem -0.2rem 0.5rem $white;
+        @include lightShadowActive;
       }
     }
 
     button {
+      @include lightShadow;
       width: fit-content;
       background-color: transparent;
       border: none;
@@ -65,27 +63,11 @@
       padding: 0.5rem 1.2rem;
       margin: .5rem 0 0 ;
       transition: box-shadow 0.1s ease-out, color 0.2s ease-out;
-      box-shadow: 0.2rem 0.2rem 0.5rem $light-shadow-2,
-        -0.2rem -0.2rem 0.5rem rgba($white, 0.7);
+
 
         &:active {
-          box-shadow: 0.2rem 0.2rem 0.5rem $light-shadow-2,
-            -0.2rem -0.2rem 0.5rem rgba($white, 0.7),
-            inset 0.2rem 0.2rem 0.2rem rgba($darkgrey-light, 0.1),
-            inset -0.2rem -0.2rem 0.5rem $white;
+          @include lightShadowActive;
         }
-      // &::before {
-      //   content: '';
-      //   display: block;
-      //   position: absolute;
-      //   bottom: 0;
-      //   left: 50%;
-      //   transform: translateX(-50%);
-      //   height: 2px;
-      //   width: 100%;
-      //   background-color: $darkgrey;
-      //   transition: all 0.3s ease-out;
-      // }
 
       &:hover,
       &:active {
@@ -147,9 +129,8 @@
   .container {
     input,
     textarea {
+      @include darkShadow;
       color: $white;
-      box-shadow: 0.2rem 0.2rem 0.5rem rgba($black, 0.7),
-      -0.2rem -0.2rem 0.5rem $light-shadow;
 
       &::placeholder {
         color: $white;
@@ -157,23 +138,16 @@
 
       &:focus,
       &:active {
-        box-shadow: 0.2rem 0.2rem 0.5rem rgba($black, 0.7),
-          -0.2rem -0.2rem 0.5rem $light-shadow,
-          inset 0.2rem 0.2rem 0.2rem rgba($black, 0.5),
-          inset -0.2rem -0.2rem 0.5rem $light-shadow;
+        @include darkShadowActive;
       }
     }
 
     button {
       color: $blue-gray;
-      box-shadow: 0.2rem 0.2rem 0.5rem rgba($black, 0.7),
-      -0.2rem -0.2rem 0.5rem $light-shadow;
+      @include darkShadow;
 
       &:active {
-        box-shadow: 0.2rem 0.2rem 0.5rem rgba($black, 0.7),
-          -0.2rem -0.2rem 0.5rem $light-shadow,
-          inset 0.2rem 0.2rem 0.2rem rgba($black, 0.5),
-          inset -0.2rem -0.2rem 0.5rem $light-shadow;
+        @include darkShadowActive;
       }
 
 
