--- a/src/assets/scss/Header.module.scss
+++ b/src/assets/scss/Header.module.scss
@@ -1,7 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Saira+Stencil+One&display=swap');
-
-// @import './global';
 @import './variables';
+@import './global';
 
 .header {
   width: 100%;
@@ -16,7 +15,7 @@
     justify-content: space-between;
     box-sizing: border-box;
     max-width: 1440px;
-    width: 100%;
+    width: 78vw;
     align-items: center;
   }
 
@@ -30,11 +29,6 @@
       line-height: 100%;
       width: 100px;
     }
-
-    // svg {
-    //   fill: $darkgrey;
-    //   transition: all 0.3s ease-out;
-    // }
   }
 
   nav {
@@ -52,43 +46,22 @@
 
       li {
         a {
+          @include lightShadow;
           color: $darkgrey;
           transition: all 0.2s ease-out;
           position: relative;
           border-radius: 1.5rem;
           padding: 0.8rem 1.2rem;
-          box-shadow: 0.2rem 0.2rem 0.5rem $light-shadow-2,
-            -0.2rem -0.2rem 0.5rem rgba($white, 0.7);
-
-          // &::before {
-          //   content: '';
-          //   display: none;
-          //   position: absolute;
-          //   bottom: 0;
-          //   left: 50%;
-          //   transform: translateX(-50%);
-          //   height: 2px;
-          //   width: 0;
-          //   background-color: $orange;
-          //   transition: all 0.3s ease-out;
-          // }
 
           &:hover,
           &:active,
           &.active {
             color: $orange;
-
-            // &::before {
-            //   width: 100%;
-            // }
           }
 
           &:active,
           &.active {
-            box-shadow: 0.2rem 0.2rem 0.5rem $light-shadow-2,
-              -0.2rem -0.2rem 0.5rem rgba($white, 0.7),
-              inset 0.2rem 0.2rem 0.2rem rgba($darkgrey-light, 0.1),
-              inset -0.2rem -0.2rem 0.5rem $white;
+            @include lightShadowActive;
           }
         }
       }
@@ -127,12 +100,88 @@
   }
 }
 
+// @media screen and (max-width: 1440px) {
+//   .header {
+//     width: 100%;
+//     display: flex;
+//     justify-content: center;
+//     height: 10vh;
+
+//     & > div {
+//       display: flex;
+//       flex-direction: row;
+//       padding: 1rem;
+//       justify-content: space-between;
+//       box-sizing: border-box;
+//       max-width: 1440px;
+//       width: 78vw;
+//       align-items: center;
+//     }
+
+//     .logo {
+//       display: flex;
+//       align-items: center;
+
+//       p {
+//         font-family: 'Saira Stencil One', cursive;
+//         font-size: 2rem;
+//         line-height: 100%;
+//         width: 100px;
+//       }
+//     }
+
+//     nav {
+//       display: flex;
+//       list-style-type: none;
+//       justify-content: center;
+//       align-items: center;
+
+//       ul {
+//         display: flex;
+//         list-style-type: none;
+//         justify-content: center;
+//         align-items: center;
+//         gap: 2rem;
+
+//         li {
+//           a {
+//             color: $darkgrey;
+//             transition: all 0.2s ease-out;
+//             position: relative;
+//             border-radius: 1.5rem;
+//             padding: 0.8rem 1.2rem;
+//             box-shadow: 0.2rem 0.2rem 0.5rem $light-shadow-2,
+//               -0.2rem -0.2rem 0.5rem rgba($white, 0.7);
+
+//             &:hover,
+//             &:active,
+//             &.active {
+//               color: $orange;
+//             }
+
+//             &:active,
+//             &.active {
+//               box-shadow: 0.2rem 0.2rem 0.5rem $light-shadow-2,
+//                 -0.2rem -0.2rem 0.5rem rgba($white, 0.7),
+//                 inset 0.2rem 0.2rem 0.2rem rgba($darkgrey-light, 0.1),
+//                 inset -0.2rem -0.2rem 0.5rem $white;
+//             }
+//           }
+//         }
+//       }
+//     }
+//   }
+// }
+
 @media screen and (max-width: 576px) {
   .header {
     width: 100vw;
     height: 80px;
-    position: relative;
-
+    position: fixed;
+    bottom: 10px;
+    left: 0;
+    right: 0;
+    z-index: 1;
 
     & > div {
       display: flex;
@@ -177,12 +226,11 @@
     .theme-button {
       position: absolute;
       left: 50%;
-      bottom: 0;
-      transform: translate(-50%);
+      top: 50%;
+      transform: translate(-50%, -50%);
     }
   }
 }
-
 
 .dark {
   .logo svg {
@@ -193,9 +241,8 @@
     ul {
       li {
         a {
+          @include darkShadow;
           color: $blue-gray;
-          box-shadow: 0.2rem 0.2rem 0.5rem rgba($black, 0.7),
-            -0.2rem -0.2rem 0.5rem $light-shadow;
 
           &:hover,
           &:active,
@@ -205,10 +252,7 @@
 
           &:active,
           &.active {
-            box-shadow: 0.2rem 0.2rem 0.5rem rgba($black, 0.7),
-              -0.2rem -0.2rem 0.5rem $light-shadow,
-              inset 0.2rem 0.2rem 0.2rem rgba($black, 0.5),
-              inset -0.2rem -0.2rem 0.5rem $light-shadow;
+            @include darkShadowActive;
           }
         }
       }
