--- a/src/assets/scss/PageDetails.module.scss
+++ b/src/assets/scss/PageDetails.module.scss
@@ -51,6 +51,7 @@
   }
 
   .back-btn {
+    @include lightShadow;
     position: absolute;
     background-color: transparent;
     bottom: 2rem;
@@ -60,14 +61,13 @@
     border-radius: 1.5rem;
     padding: 0.8rem 1.2rem;
     transition: all 0.2s ease-out;
-    box-shadow: 0.2rem 0.2rem 0.5rem $light-shadow-2,
-      -0.2rem -0.2rem 0.5rem rgba($white, 0.7);
 
     &:active {
-      box-shadow: 0.2rem 0.2rem 0.5rem $light-shadow-2,
-        -0.2rem -0.2rem 0.5rem rgba($white, 0.7),
-        inset 0.2rem 0.2rem 0.2rem rgba($darkgrey-light, 0.1),
-        inset -0.2rem -0.2rem 0.5rem $white;
+      @include lightShadowActive;
+    }
+
+    &:hover {
+      color: $orange;
     }
   }
 }
@@ -119,15 +119,15 @@
   }
 
   .back-btn {
+    @include darkShadow;
     color: $white;
-    box-shadow: 0.2rem 0.2rem 0.5rem rgba($black, 0.7),
-      -0.2rem -0.2rem 0.5rem $light-shadow;
 
     &:active {
-      box-shadow: 0.2rem 0.2rem 0.5rem rgba($black, 0.7),
-        -0.2rem -0.2rem 0.5rem $light-shadow,
-        inset 0.2rem 0.2rem 0.2rem rgba($black, 0.5),
-        inset -0.2rem -0.2rem 0.5rem $light-shadow;
+      @include darkShadowActive;
+    }
+
+    &:hover {
+      color: $purple;
     }
   }
 }
