--- a/src/assets/scss/ThemeButton.module.scss
+++ b/src/assets/scss/ThemeButton.module.scss
@@ -1,6 +1,8 @@
 @import './variables';
+@import './global';
 
 .container {
+  @include lightShadow;
   height: 40px;
   width: 100px;
   background-image: radial-gradient(
@@ -8,8 +10,6 @@
     rgba(253, 203, 50, 1) 0%,
     rgba(244, 56, 98, 1) 100.2%
   );
-  box-shadow: 0.2rem 0.2rem 0.5rem $light-shadow-2,
-    -0.2rem -0.2rem 0.5rem rgba($white, 0.7);
   border-radius: 25px;
   display: flex;
   align-items: center;
@@ -17,8 +17,6 @@
   padding: 0 5px;
   cursor: pointer;
   position: relative;
-  // right: 50px;
-  // top: 20px;
   transition: all 0.2s ease-out;
   -webkit-tap-highlight-color: transparent;
 
@@ -52,8 +50,8 @@
 }
 
 .on {
-  box-shadow: 0.2rem 0.2rem 0.5rem rgba($black, 0.7),
-    -0.2rem -0.2rem 0.5rem $light-shadow;
+  @include darkShadow;
+
   .dark {
     opacity: 1;
   }
@@ -75,64 +73,60 @@
   z-index: 1;
 }
 
-
 @media screen and (max-width: 576px) {
-.container {
-  height: 50px;
-  width: 50px;
-  border-radius: 50%;
-  display: flex;
-  align-items: center;
-  box-sizing: border-box;
-  padding: 0 5px;
-  cursor: pointer;
-  position: relative;
-  // right: 50px;
-  // top: 20px;
-  transition: all 0.2s ease-out;
-
-  .icon {
-    color: #f88748;
-  }
-
-  .dark {
-    transition: all 0.2s ease-out;
-    opacity: 0;
-    position: absolute;
-    right: 0;
-    top: 0;
-    border-radius: 25px;
+  .container {
     height: 50px;
     width: 50px;
+    border-radius: 50%;
     display: flex;
     align-items: center;
     box-sizing: border-box;
     padding: 0 5px;
-    z-index: 0;
-    transform: scale(1.01);
-  }
-}
+    cursor: pointer;
+    position: relative;
+    transition: all 0.2s ease-out;
 
-.on {
-  .dark {
-    opacity: 1;
+    .icon {
+      color: #f88748;
+    }
+
+    .dark {
+      transition: all 0.2s ease-out;
+      opacity: 0;
+      position: absolute;
+      right: 0;
+      top: 0;
+      border-radius: 25px;
+      height: 50px;
+      width: 50px;
+      display: flex;
+      align-items: center;
+      box-sizing: border-box;
+      padding: 0 5px;
+      z-index: 0;
+      transform: scale(1.01);
+    }
   }
 
-  .icon {
-    color: rgba(41, 14, 151, 1);
-  }
-}
-.handle {
-  height: 40px;
-  width: 40px;
-  border-radius: 50%;
-  display: grid;
-  align-items: center;
-  justify-items: center;
-  background-color: $white;
-  overflow: hidden;
-  position: relative;
-  z-index: 1;
-}
+  .on {
+    .dark {
+      opacity: 1;
+    }
 
+    .icon {
+      color: rgba(41, 14, 151, 1);
+    }
+  }
+  .handle {
+    height: 40px;
+    width: 40px;
+    border-radius: 50%;
+    display: grid;
+    align-items: center;
+    justify-items: center;
+    background-color: $white;
+    overflow: hidden;
+    position: relative;
+    z-index: 1;
+  }
 }
