--- a/src/assets/scss/_global.scss
+++ b/src/assets/scss/_global.scss
@@ -22,6 +22,30 @@
   font-family: 'Saira Stencil One', cursive;
 }
 
+@mixin lightShadow {
+  box-shadow: 0.2rem 0.2rem 0.5rem $light-shadow-2,
+    -0.2rem -0.2rem 0.5rem rgba($white, 0.7);
+}
+
+@mixin lightShadowActive {
+  box-shadow: 0.2rem 0.2rem 0.5rem $light-shadow-2,
+    -0.2rem -0.2rem 0.5rem rgba($white, 0.7),
+    inset 0.2rem 0.2rem 0.2rem rgba($darkgrey-light, 0.1),
+    inset -0.2rem -0.2rem 0.5rem $white;
+}
+
+@mixin darkShadow {
+  box-shadow: 0.2rem 0.2rem 0.5rem rgba($black, 0.7),
+  -0.2rem -0.2rem 0.5rem $light-shadow;
+}
+
+@mixin darkShadowActive {
+  box-shadow: 0.2rem 0.2rem 0.5rem rgba($black, 0.7),
+  -0.2rem -0.2rem 0.5rem $light-shadow,
+  inset 0.2rem 0.2rem 0.2rem rgba($black, 0.5),
+  inset -0.2rem -0.2rem 0.5rem $light-shadow;
+}
+
 * {
   font-family: 'Poppins', sans-serif;
   margin: 0;
@@ -68,18 +92,23 @@ a {
 }
 
 @media screen and (max-width: 576px) {
-  #root {
-    & > div {
-      display: flex;
-      flex-direction: column-reverse;
+  body {
+    overflow-x: hidden;
+    overflow-y: auto;
 
-      main {
-        height: 80vh;
+    #root {
+      & > div {
+        display: flex;
+        flex-direction: column-reverse;
 
-        & > div {
-          height: 100%;
-          display: flex;
-          align-items: center;
+        main {
+          height: 80vh;
+
+          & > div {
+            height: 100%;
+            display: flex;
+            align-items: center;
+          }
         }
       }
     }
