--- a/src/assets/scss/PageDetails.module.scss
+++ b/src/assets/scss/PageDetails.module.scss
@@ -74,7 +74,7 @@
 
 @media screen and (max-width: 576px) {
   .wrapper {
-    padding: .5rem;
+    padding: 1rem .5rem 5rem;
     flex-direction: column-reverse;
     justify-content: flex-end;
     gap: 1rem;
