--- a/src/assets/scss/PortfolioPage.module.scss
+++ b/src/assets/scss/PortfolioPage.module.scss
@@ -29,7 +29,7 @@
 
 @media screen and (max-width: 576px) {
   .wrapper {
-    padding: 1.5rem;
+    padding: 5rem 1.5rem;
 
     .container {
       flex-direction: column;
