--- a/src/assets/scss/ThemeButton.module.scss
+++ b/src/assets/scss/ThemeButton.module.scss
@@ -78,55 +78,45 @@
     height: 50px;
     width: 50px;
     border-radius: 50%;
-    display: flex;
-    align-items: center;
-    box-sizing: border-box;
-    padding: 0 5px;
-    cursor: pointer;
-    position: relative;
-    transition: all 0.2s ease-out;
-
-    .icon {
-      color: #f88748;
-    }
+    padding: 0;
 
     .dark {
-      transition: all 0.2s ease-out;
-      opacity: 0;
-      position: absolute;
-      right: 0;
-      top: 0;
-      border-radius: 25px;
       height: 50px;
       width: 50px;
       display: flex;
-      align-items: center;
-      box-sizing: border-box;
-      padding: 0 5px;
+      padding: 0;
       z-index: 0;
-      transform: scale(1.01);
+    }
+
+    .handle {
+      height: 50px;
+      width: 50px;
+      background-color: $blue-gray;
+      transition: all 0.2s ease-out;
+      transform: scale(1.02) !important;
+
+      &:active {
+        @include lightShadowActive;
+      }
     }
   }
 
   .on {
+    @include darkShadow;
+
     .dark {
       opacity: 1;
     }
 
-    .icon {
-      color: rgba(41, 14, 151, 1);
+    .handle {
+      background-color: $darkgrey;
+
+      &:active {
+        @include darkShadowActive;
+      }
+      .icon {
+        color: $purple;
+      }
     }
-  }
-  .handle {
-    height: 40px;
-    width: 40px;
-    border-radius: 50%;
-    display: grid;
-    align-items: center;
-    justify-items: center;
-    background-color: $white;
-    overflow: hidden;
-    position: relative;
-    z-index: 1;
   }
 }
