--- a/src/assets/scss/PageWrapper.module.scss
+++ b/src/assets/scss/PageWrapper.module.scss
@@ -13,14 +13,14 @@
   background-color: $blue-gray;
   color: $darkgrey;
   box-shadow: 0.5rem 0.5rem 1rem $light-shadow-2,
-            -0.5rem -0.5rem 1rem rgba($white, 0.7);
+    -0.5rem -0.5rem 1rem rgba($white, 0.7);
 }
 
 .dark {
   background-color: $darkgrey;
   color: $blue-gray;
   box-shadow: 0.5rem 0.5rem 1rem rgba($black, 0.7),
-             -0.5rem -0.5rem 1rem $light-shadow;
+    -0.5rem -0.5rem 1rem $light-shadow;
 }
 
 @media screen and (min-width: 1920px) {
@@ -35,6 +35,11 @@
     border-radius: 0.8rem;
     width: 90vw;
     aspect-ratio: unset;
-    height: fit-content;
+    height: 100%;
+    overflow-y: auto;
+
+    &::-webkit-scrollbar {
+      width: 0;
+    }
   }
 }
