--- a/src/assets/scss/Header.module.scss
+++ b/src/assets/scss/Header.module.scss
@@ -209,7 +209,7 @@
     @include lightShadow;
     width: 100vw;
     height: fit-content;
-    position: fixed;
+    // position: fixed;
     bottom: 0;
     left: 0;
     right: 0;
@@ -258,9 +258,8 @@
 
     .theme-button {
       position: absolute;
-      left: 50%;
-      top: 0;
-      transform: translate(-50%, -50%);
+      right: 5%;
+      top: 1%;
     }
   }
 
