--- a/src/assets/scss/ThemeButton.module.scss
+++ b/src/assets/scss/ThemeButton.module.scss
@@ -74,43 +74,53 @@
 }
 
 @media screen and (max-width: 576px) {
+  // .container {
+  //   height: 50px;
+  //   width: 50px;
+  //   border-radius: 50%;
+  //   padding: 0;
+
+  //   .dark {
+  //     height: 50px;
+  //     width: 50px;
+  //     display: flex;
+  //     padding: 0;
+  //     z-index: 0;
+  //   }
+
+  //   .handle {
+  //     height: 50px;
+  //     width: 50px;
+  //     background-color: $blue-gray;
+  //     transition: all 0.2s ease-out;
+  //     transform: scale(1.02) !important;
+
+  //     &:active {
+  //       @include lightShadowActive;
+  //     }
+  //   }
+  // }
+
   .container {
-    height: 50px;
-    width: 50px;
-    border-radius: 50%;
+    height: 15px;
+    width: 40px;
     padding: 0;
 
     .dark {
-      height: 50px;
-      width: 50px;
-      display: flex;
+      height: 15px;
+      width: 40px;
       padding: 0;
-      z-index: 0;
-    }
-
-    .handle {
-      height: 50px;
-      width: 50px;
-      background-color: $blue-gray;
-      transition: all 0.2s ease-out;
-      transform: scale(1.02) !important;
-
-      &:active {
-        @include lightShadowActive;
-      }
+      transform: scale(1.01);
     }
   }
 
+  .handle {
+    height: 25px;
+    width: 25px;
+  }
+
   .on {
-    @include darkShadow;
-
-    .dark {
-      opacity: 1;
-    }
-
     .handle {
-      background-color: $darkgrey;
-
       &:active {
         @include darkShadowActive;
       }
