--- a/src/assets/scss/_global.scss
+++ b/src/assets/scss/_global.scss
@@ -95,13 +95,10 @@ a {
   body {
     overflow-x: hidden;
     overflow-y: auto;
-    height: 100vh;
 
     #root {
-      height: 100%;
 
       & > div {
-        height: 100%;
         display: flex;
         flex-direction: column-reverse;
 
@@ -110,7 +107,7 @@ a {
             height: 90%;
             display: flex;
             align-items: center;
-            bottom: 10px;
+            top: 10%;
           }
         }
       }
