--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -5,7 +5,8 @@ $blue-gray      : #ECEFF1;
 $white          : #fff;
 $green          : #00C853;
 $orange         : #FF8F00;
-$purple         : #AA00FF;
+$purple         : #6200EA;
+// $purple      : #AA00FF;
 $dark-shadow    : rgba($black, 0.5);
 $light-shadow   : rgba($darkgrey-light, 0.5);
 $light-shadow-2 : rgba($darkgrey-light, 0.3);
