--- a/src/assets/scss/ContactPage.module.scss
+++ b/src/assets/scss/ContactPage.module.scss
@@ -22,6 +22,10 @@
     textarea {
       resize: none;
       height: 10rem;
+
+      &::-webkit-scrollbar {
+        width: 0;
+      }
     }
 
     input,
@@ -62,17 +66,47 @@
       cursor: pointer;
       border-radius: 1.5rem;
       padding: 0.5rem 1.2rem;
-      margin: .5rem 0 0 ;
+      margin: 0.5rem 0 0;
       transition: box-shadow 0.1s ease-out, color 0.2s ease-out;
 
-
-        &:active {
-          @include lightShadowActive;
-        }
+      &:active {
+        @include lightShadowActive;
+      }
 
       &:hover,
       &:active {
         color: $orange;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 1600px) {
+  .wrapper {
+    gap: 3rem;
+  }
+}
+
+@media screen and (max-width: 1440px) {
+  .wrapper {
+    gap: 1.5rem;
+    padding: 1.5rem;
+
+    .container {
+      gap: 0.8rem;
+      width: 30rem;
+
+      input {
+        height: 2.8rem;
+      }
+
+      textarea {
+        height: 8rem;
+      }
+
+      button {
+        font-size: 0.95rem;
+        margin: 0;
       }
     }
   }
@@ -111,17 +145,16 @@
         font-size: 1rem;
         border-radius: 1.5rem;
         padding: 0.8rem 1.5rem;
-        margin: 1rem 0 0 ;
+        margin: 1rem 0 0;
         -webkit-tap-highlight-color: transparent;
 
-        &:hover{
+        &:hover {
           color: $darkgrey;
         }
 
-        &:active{
+        &:active {
           color: $orange;
         }
-
       }
     }
   }
@@ -152,12 +185,11 @@
         @include darkShadowActive;
       }
 
-
-      &:hover{
+      &:hover {
         color: $blue-gray;
       }
 
-      &:active{
+      &:active {
         color: $purple;
       }
     }
