--- a/src/assets/scss/SinglePortfolioPage.module.scss
+++ b/src/assets/scss/SinglePortfolioPage.module.scss
@@ -7,8 +7,8 @@
   align-items: center;
   background-color: $orange;
   border-radius: 1rem;
-  width: 18rem;
-  height: 25rem;
+  height: 100%;
+  aspect-ratio: 3/4;
   filter: drop-shadow(0 0.2rem 0.7rem $light-shadow);
   transition: all 300ms ease-in-out;
 
@@ -18,6 +18,14 @@
     font-size: 2rem;
     font-weight: bold;
     position: absolute;
+  }
+}
+
+@media screen and (max-width: 1600px) {
+  .page {
+    h2 {
+      font-size: 1.5rem;
+    }
   }
 }
 
