done resolutions 992 - 1200, small tablets to do

--- a/src/assets/scss/AboutPage.module.scss
+++ b/src/assets/scss/AboutPage.module.scss
@@ -54,17 +54,87 @@
   }
 }
 
-@media screen and (max-width: 1600px ){
+@media screen and (max-width: 1600px) {
   .wrapper {
     gap: 4rem;
   }
 }
 
-@media screen and (max-width: 1440px ){
+@media screen and (max-width: 1440px) {
   .wrapper {
     gap: 3rem;
   }
 }
+
+@media screen and (max-width: 1200px) {
+  .wrapper {
+    gap: 2rem;
+
+    h1 {
+      margin: 2rem 0 0 0;
+    }
+
+    .content {
+      max-width: 90%;
+
+      .left {
+        width: 35%;
+
+        .socials {
+          gap: 2rem;
+        }
+      }
+
+      .right {
+        width: 65%;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 992px) {
+  .wrapper {
+    gap: 3rem;
+    padding: 0 2rem;
+
+    h1 {
+      margin: 2rem 0 0 0;
+    }
+
+    .content {
+      flex-direction: column;
+      max-width: unset;
+      width: 100%;
+
+      .left {
+        width: 100%;
+
+        .photo {
+          width: 10rem;
+          height: 10rem;
+        }
+
+        & > p {
+          font-size: 1.2rem;
+        }
+
+        .socials {
+          justify-content: center;
+          gap: 2.5rem;
+        }
+      }
+
+      .right {
+        margin: 3rem 0 0;
+        width: 100%;
+
+        p {
+          font-size: 0.9rem;
+        }
+      }
+    }
+  }
+  }
 
 @media screen and (max-width: 576px) {
   .wrapper {
@@ -82,8 +152,8 @@
       .left {
         width: 100%;
         flex-direction: column;
-        gap: .8rem;
-        margin: 0 0 .2rem;
+        gap: 0.8rem;
+        margin: 0 0 0.2rem;
 
         .photo {
           width: 8rem;
