--- a/src/assets/scss/PageDetails.module.scss
+++ b/src/assets/scss/PageDetails.module.scss
@@ -96,6 +96,59 @@
   }
 }
 
+@media screen and (max-width: 992px) {
+  .wrapper {
+    padding: 3rem;
+    flex-direction: column-reverse;
+    justify-content: flex-end;
+    gap: 2rem;
+
+    &-photo {
+      width: 100%;
+      height: 50%;
+
+      .photo {
+        width: 100%;
+        height: 100%;
+      }
+    }
+
+    &-text {
+      width: 100%;
+      gap: 1rem;
+
+      .title {
+        font-size: 3rem;
+      }
+
+      .text {
+        max-width: 100%;
+      }
+    }
+
+    .back-btn {
+      @include lightShadow;
+      position: absolute;
+      background-color: transparent;
+      bottom: 2rem;
+      right: 2rem;
+      color: $darkgrey;
+      text-decoration: none;
+      border-radius: 1.5rem;
+      padding: 0.8rem 1.2rem;
+      transition: all 0.2s ease-out;
+
+      &:active {
+        @include lightShadowActive;
+      }
+
+      &:hover {
+        color: $orange;
+      }
+    }
+  }
+}
+
 @media screen and (max-width: 576px) {
   .wrapper {
     padding: 1rem .5rem 5rem;
