--- a/src/assets/scss/SocialIcons.module.scss
+++ b/src/assets/scss/SocialIcons.module.scss
@@ -52,3 +52,18 @@
     }
   }
 }
+
+@media screen and (max-width: 1200px) {
+  .socials {
+    gap: 1rem;
+
+    a {
+      height: 1.8rem;
+      padding: 0.4rem;
+
+      svg {
+        width: 1.8rem;
+      }
+    }
+  }
+}
