--- a/src/assets/scss/_global.scss
+++ b/src/assets/scss/_global.scss
@@ -36,14 +36,14 @@
 
 @mixin darkShadow {
   box-shadow: 0.2rem 0.2rem 0.5rem rgba($black, 0.7),
-  -0.2rem -0.2rem 0.5rem $light-shadow;
+    -0.2rem -0.2rem 0.5rem $light-shadow;
 }
 
 @mixin darkShadowActive {
   box-shadow: 0.2rem 0.2rem 0.5rem rgba($black, 0.7),
-  -0.2rem -0.2rem 0.5rem $light-shadow,
-  inset 0.2rem 0.2rem 0.2rem rgba($black, 0.5),
-  inset -0.2rem -0.2rem 0.5rem $light-shadow;
+    -0.2rem -0.2rem 0.5rem $light-shadow,
+    inset 0.2rem 0.2rem 0.2rem rgba($black, 0.5),
+    inset -0.2rem -0.2rem 0.5rem $light-shadow;
 }
 
 * {
@@ -91,13 +91,29 @@ a {
   }
 }
 
+@media screen and (max-width: 1200px) {
+  main {
+    & > div {
+      width: 100%;
+      height: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+
+      & > div {
+        width: 90%;
+        height: 85%;
+      }
+    }
+  }
+}
+
 @media screen and (max-width: 576px) {
   body {
     overflow-x: hidden;
     overflow-y: auto;
 
     #root {
-
       & > div {
         display: flex;
         flex-direction: column-reverse;
