--- a/src/assets/scss/PortfolioPage.module.scss
+++ b/src/assets/scss/PortfolioPage.module.scss
@@ -9,9 +9,11 @@
 
   .container {
     display: flex;
-    justify-content: center;
+    // justify-content: center;
     gap: 2rem;
     height: 100%;
+    width: 100%;
+    overflow: auto;
   }
 }
 
@@ -34,21 +36,7 @@
     gap: 1rem;
 
     .container {
-      gap: 2rem;
       height: 80%;
-    }
-  }
-
-  .dark {
-    .container {
-      & > a {
-        background-color: $purple;
-        filter: drop-shadow(0 0 1rem $dark-shadow);
-
-        h2 {
-          color: $blue-gray;
-        }
-      }
     }
   }
 }
@@ -59,23 +47,9 @@
 
     .container {
       gap: 1rem;
-      width: 100%;
       height: 100%;
       flex-direction: column;
       justify-content: flex-start;
-    }
-  }
-
-  .dark {
-    .container {
-      & > a {
-        background-color: $purple;
-        filter: drop-shadow(0 0 1rem $dark-shadow);
-
-        h2 {
-          color: $blue-gray;
-        }
-      }
     }
   }
 }
@@ -83,24 +57,5 @@
 @media screen and (max-width: 576px) {
   .wrapper {
     padding: 2rem 1.5rem;
-
-    .container {
-      flex-direction: column;
-      width: 100%;
-      gap: 1rem;
-    }
-  }
-
-  .dark {
-    .container {
-      & > a {
-        background-color: $purple;
-        filter: drop-shadow(0 0 1rem $dark-shadow);
-
-        h2 {
-          color: $blue-gray;
-        }
-      }
-    }
   }
 }
